adding new features
