# authservices/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   error.HTTPError:
     properties:
@@ -26,7 +25,6 @@ definitions:
     required:
     - email
     type: object
-host: localhost:8889
 info:
   contact:
     email: support@swagger.io
@@ -77,11 +75,40 @@ paths:
       summary: authenticate user
       tags:
       - Authentication
+  /api/v1/auth/test:
+    get:
+      consumes:
+      - application/json
+      description: testing grpc
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userm.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: testing grpc
+      tags:
+      - Authentication
   /api/v1/auth/verify:
     post:
       consumes:
       - application/json
-      description: Verify if the user exist by supplying email
+      description: Verify verify grpc
       parameters:
       - description: User Data
         in: body
@@ -111,7 +138,7 @@ paths:
             $ref: '#/definitions/error.HTTPError'
       security:
       - ApiKeyAuth: []
-      summary: verify user by email
+      summary: verify grpc
       tags:
       - Authentication
 securityDefinitions:
