# authservices/routes/auth/auth.go
@@ -10,5 +10,6 @@ func Auth(router *gin.RouterGroup) {
 	{
 		route.POST("/login", auth.CreateAuthEndpoint)
 		route.POST("/verify", auth.VerifyByEmail)
+		route.GET("/test", auth.TestByEmail)
 	}
 }
